# linux-firewire-utils

./: .gitignore  Makefile.am  README  README.in  TODO  configure.ac
src/: Makefile.am  crpp  firewire-phy-command.8.in  firewire-phy-command.c  firewire-request.8.in  firewire-request.c  lsfirewire.8.in  lsfirewire.in  lsfirewirephy.8.in  lsfirewirephy.c
